# XanoviLib

./: .gitignore  README.md  bunup.config.ts  package.json  tsconfig.json
examples/: instance.ts
examples/pawnote/: instance.ts
examples/pawnote/parents/: auth.ts  children.ts
examples/pawnote/students/: auth.ts  base.ts  homepage.ts
examples/students/: auth.ts  base.ts  homework.ts  timetable.ts
meowdle/: README.md  package.json
meowdle/src/: index.ts
pawnote/: README.md  package.json
pawnote/src/core/: date.ts
pawnote/src/models/: attachment.ts  authentication.ts  errors.ts  (+12 more)
rust/: Cargo.toml
rust/pawnote/: Cargo.toml
rust/pawnote/src/: lib.rs
rust/pawnote/src/api/function/: index.rs  mod.rs  request.rs  response.rs
rust/pawnote/src/core/: deflate.rs  inflate.rs  mod.rs  user_agent.rs
rust/pawnote/src/model/: errors.rs  instance.rs  mod.rs  params.rs  pending_login.rs  request.rs  response.rs  session.rs  version.rs  webspace.rs
rust/pawnote/src/model/portals/: login_portal.rs  mod.rs  student_login_portal.rs
rust/schwi/: Cargo.toml
rust/xanovi/: Cargo.toml
src/: index.ts
typescript/: .config  package.json  tsconfig.json
typescript/examples/: instance.ts
typescript/src/: index.ts
typescript/tools/: create.ts
utils/desero/: package.json
utils/maq/: README.md
utils/schwi/: README.md  package.json
utils/uwtil/: package.json
xanovi_preview/: README.md  package.json  tsconfig.json  vite.config.ts
xanovi_preview/src/: index.css  index.tsx  main.tsx  theme.css
xanovi_preview/src-tauri/: Cargo.toml  tauri.conf.json
(+140 files in other folders)
