[package]
name = "pawnote"
version = "0.1.0"
edition = "2021"

[dependencies]
schwi = { path = "../schwi" }
aes = "0.8"
cbc = "0.1"
md-5 = "0.10"
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.42"
url = "2.5.7"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
hex = "0.4"
flate2 = "1.1"
base64 = "0.22.1"
rand = "0.8"
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"
regex = "1.12.2"